<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rest Client Template</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">TL</string>
    <string name="tweet_item">tweet item</string>
    <string name="title_activity_compose">Compose</string>
    <string name="action_profile">Profile</string>
    <string name="action_compose">Compose</string>
    <string name="action_refresh">Refresh</string>
    <string name="button_tweet">Tweet!</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_enterTweet">Enter your tweet here</string>
    <string name="title_activity_profile">Profile</string>
    <string name="user_name">User name</string>
 	<string name="user_tagline">User tagline</string>
 	<string name="followers_count">Followers Count</string>
 	<string name="following_count">Following Count</string>

</resources>