<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity" >

    <RelativeLayout
        android:id="@+id/rlProfileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/tweet_item" />

        <TextView
            android:id="@+id/tvProfileName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:text="@string/user_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvProfileTagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvProfileName"
            android:layout_below="@id/tvProfileName"
            android:text="@string/user_tagline"
            android:textSize="12sp" />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/llCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/rlProfileHeader"
        android:orientation="horizontal" > 
        
        <TextView
            android:id="@+id/tvFollowersCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:layout_marginLeft="20dp"
            android:text="@string/followers_count" />
        
        <TextView
            android:id="@+id/tvFollowingCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/following_count" />
        
   	</LinearLayout>
    
    <fragment
        android:id="@+id/fragmentUserTimeline"
        android:name="com.ubante.assignments.twitterclient.fragments.UserTimelineFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llCounts"
        tools:layout="@layout/fragment_tweets_list" />
    
</RelativeLayout>
